crates/ruff_python_parser/tests/snapshots/valid_syntax@type_param_type_var.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/type_param_type_var.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..147,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..15,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..9,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 7..8,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 7..8,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 12..15,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 16..37,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 21..22,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 22..31,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 23..30,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 23..24,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 27..30,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 34..37,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 38..64,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 43..44,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 44..58,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 45..57,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 45..46,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 48..51,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 54..57,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 61..64,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 65..98,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 70..71,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 71..92,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 72..91,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 72..73,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    node_index: NodeIndex(None),
                                                    range: 75..85,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 76..79,
                                                                id: Name("int"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 81..84,
                                                                id: Name("int"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                },
                                            ),
                                        ),
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 88..91,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 95..98,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 99..146,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 104..105,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 105..140,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 106..118,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 106..107,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 109..112,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 115..118,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 120..139,
                                        name: Identifier {
                                            id: Name("U"),
                                            range: 120..121,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    node_index: NodeIndex(None),
                                                    range: 123..133,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 124..127,
                                                                id: Name("int"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 129..132,
                                                                id: Name("int"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                },
                                            ),
                                        ),
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 136..139,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 143..146,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
